API connection, auto-launcher

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ OPENAI_ORG_ID=""
 OPENAI_API_KEY=""
 
 POWERPOINT_EXE_PATH=""
+
+FRONTEND_URL="https://example.com"  # with https://, without trailing "/"
